# textual-cli-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPING.md  LICENSE  README.md  Roadmap.md  chat_export.txt  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
prompts/: 0_getting-started.md  251019_create_roadmap.md  251019_loading_indicator.md  251019_ollama_support.md
tasks/: phase1_backlog.md
tests/: conftest.py  test_anthropic_provider.py  test_api_error_handler.py  test_builtin_tools.py  test_cli_chat.py  test_cli_help.py  test_config.py  test_context_manager.py  test_copy_shortcut.py  test_engine.py  test_error_handling.py  test_git_tools.py  test_mcp_manager.py  test_ollama_provider.py  test_openai_chunked_tool_calls.py  test_openai_provider_formatting.py  test_provider_errors.py  test_provider_factory.py  test_sessions_store.py  test_theme_command_palette.py  test_theme_persistence.py  test_todo_store.py  test_tool_panel.py  test_tools_registry.py  test_ui_css.py  test_ui_ctrl_quit.py  test_ui_error_handling.py
tests/ui/: test_chat_view.py
textual_cli_agent/: cli.py  config.py  context_manager.py  engine.py  error_handler.py  session_store.py  todo_store.py  tools.py  workspace.py
textual_cli_agent/examples/: tools_example.py
textual_cli_agent/mcp/: client.py
textual_cli_agent/prompts/: __init__.py  system_prompt.txt
textual_cli_agent/providers/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
textual_cli_agent/tools/: __init__.py  files.py  git.py  http.py  parallel.py  todo.py  (+1 more)
(+17 files in other folders)
