[project]
name = "textual-cli-agent"
version = "0.1.0"
description = "A Textual-based CLI LLM agent with MCP support and pluggable Python tools"
authors = [
  { name = "Rovo Dev" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.58.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "anyio>=4.4.0",
  "openai>=1.37.0",
  "anthropic>=0.34.0",
  "pyperclip>=1.8.2",
  "mcp>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7.1",
  "ruff>=0.6.3",
  "mypy>=1.10.0",
  "pytest>=8.3.1",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "types-requests",
]

[project.scripts]
textual-cli-agent = "textual_cli_agent.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["prompts"]

[tool.uv]
# Ensure uv recognizes this as a modern project
package = true

[tool.coverage.run]
branch = true
source = ["textual_cli_agent"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 55

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
preview = true
